# yanxu-sqlite

./: .gitignore  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  言序.toml
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  GUIDE.md  MIGRATION.md  PERFORMANCE.md  RELEASE_NOTES_1.0.0.md  SECURITY_MODEL.md
examples/: 轻舟入门.yx
integration/CLI消费者/: 主.yx  言序.toml
integration/原生消费者/: 主.yx  言序.toml
integration/无文件权限消费者/: 主.yx  言序.toml
native/: Cargo.toml
native/src/: abi.rs  backend.rs  bridge.rs  data.rs  lib.rs
scripts/: verify_docs.rb
src/: 言舟.yx
tests/: 事务与迁移.yx  绑定与语句.yx
